# lunarwatcher.github.io

./: .gitignore  .gitmodules  .ignore  404.html  CONTRIBUTING.md  Gemfile  LICENSE  README.md  _config.yml  _config.yml.orig  _redirects  categories.html  combined.atom  config.yaml  crypto.html  deploy.sh  emojis.html  emojis.md  feed.xml  hugo.yaml  index.html  index.md  javacomments.md  jekyll-theme-githubpages.gemspec  kb.md  keybase.txt  markup.html  markup.md  projects.html  projects.md  robots.txt  scratchpad.html  sitemap.xml  style.scss  tags.html  todo.html  todo.md  uses.html  violet.json  yes-i-use-light-mode.html
_includes/: footer.html  head.html  header.html  header.html.orig  nav.html  project-links.html  se-flair.html  socialmedia.html  toc.html
_layouts/: default.html  feeds.html  post.html
_partials/: after-post.inja  footer.inja  head.inja  header.inja  list-pages-in-scope.inja  note-tree-builder.inja  notes-sidebar.inja  paginator.inja  post-meta.inja  rss.inja
_posts/: 2018-06-18-jekyll.md  2018-06-18-resources.md  2018-06-18-resources.md.orig  2018-06-19-multiple-gh-accounts.md  2019-02-16-various-raspberry-pi-package-updates.md  2019-02-20-the-essential-skill-of-debugging.md
assets/: _default_style.css
blog/: 2025-08-18-beating-wsl-into-submission.html  2025-12-24-markdown-and-the-illusion-of-portability.html  2026-03-01-information-post-stack-overflow.html  2026-03-14-thoughts-on-themes.html  2026-03-14-thoughts-on-themes.md  (+5 more)
code/lua54-part1/: CMakeLists.txt  README.md
code/lua54-part1/lua/: demo.lua
code/lua54-part1/src/: CMakeLists.txt
code/lua54-part1/src/demo/: Main.cpp
code/lua54-part1/src/demo/api/: DemoAPI.cpp  DemoAPI.hpp  Helper.cpp
code/lua54-part2/src/: CMakeLists.txt
code/lua54-part2/src/demo/: Main.cpp
code/lua54-part2/src/demo/api/: Helper.cpp  Helper.hpp  TableAPI.cpp  TableAPI.hpp
(+399 files in other folders)
